tests/NormalTests/paczka1/fuzzy1/57470589.err
Error in line 1: RvIp S289 77,8
Error in line 5: cyKSORkW S289 57,7
Error in line 12: cyKSORkW S59 52,0
Error in line 9: RvIp S981 64,2
Error in line 18: fDR7 S879 44,8
Error in line 31: RvIp S289 69,2
